# inspo-prop

./: .gitignore  README.md  package-lock.json  package.json  todo.txt
backend/: Pulumi.yaml  README.md  alembic.ini  data.py  db.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 09a91a304d70_create_entries_table.py
backend/backend/: data.py  db.py  main.py
frontend/: package-lock.json  package.json
frontend/components/: NewEntryForm.js  Table.tsx  table.js
frontend/pages/: index.js  new_entry.js
frontend/utils/: Random.js
pages/: index.js
